# ellar

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  api_documentation.py  application.py  compatible.py  constants.py  context.py  converters.py  datastructures.py  events.py  exception_handlers.py  exceptions.py  helper.py  index.html  logger.py  main.py  mkdocs.yml  mypy.ini  operation_meta.py  pyproject.toml  pytest.ini  requests.py  requirements-docs.txt  requirements-tests.txt  requirements.txt  schema.py  settings.py  shortcuts.py  sitemap.xml  static_files.py  status.py  test_client.py  types.py  websockets.py
.github/workflows/: publish.yml  test.yml  test_full.yml
architek/: __init__.py  __main__.py  cli.py  constants.py  context.py  converters.py  events.py  exception_handlers.py  exceptions.py  factory.py  logger.py  main.py  operation_meta.py  requests.py  schema.py  serializer.py  shortcuts.py  static_files.py  test_client.py  types.py  websockets.py
architek/common/: __init__.py
architek/compatible/: __init__.py  cache_properties.py  contextmanager.py  dict.py  emails.py
architek/conf/: app_settings_models.py  config.py  default_settings.py
architek/controller/: __init__.py  base.py  routing.py
architek/core/: __init__.py  context.py  events.py  exception_handlers.py  factory.py  main.py  operation_meta.py  schema.py  staticfiles.py  testclient.py
architek/di/: __init__.py  exceptions.py  injector.py  providers.py  scopes.py  service_config.py
architek/exceptions/: __init__.py
architek/guard/: __init__.py  apikey.py  base.py  http.py
architek/helper/: __init__.py  modelfield.py  module_loading.py
architek/middleware/: di.py  versioning.py
architek/module/: __init__.py  base.py
architek/openapi/: __init__.py  builder.py  module.py  openapi_v3.py  route_doc_models.py
compatible/: __init__.py  cache_properties.py  dict.py  emails.py
conf/: app_settings_models.py  config.py  default_settings.py
contribution/: index.html
controller/: __init__.py  base.py  routing.py
converters/: __init__.py
custom-setup/: index.html
di/: __init__.py  exceptions.py  injector.py  providers.py  scopes.py  service_config.py
docs/: background-task.md  caching.md  configurations.md  contribution.md  custom-setup.md  index.md  mount.md  quick-project.md  quick-start.md  release-notes.md  throttling.md
ellar/: __init__.py  __main__.py  asgi_args.py  cli.py  common_types.py  constants.py  events.py  logger.py  reflect.py  serializer.py  shortcuts.py
examples/02-socketio-app/: README.md  pyproject.toml
examples/02-socketio-app/socketio_app/: config.py  root_module.py  server.py
examples/02-socketio-app/socketio_app/apps/events/: controllers.py  gateways.py  module.py  routers.py  schemas.py  services.py
examples/02-socketio-app/socketio_app/apps/events/templates/events/: index.html
examples/02-socketio-app/tests/: conftest.py
examples/04-auth-with-handlers/: README.md  pyproject.toml
examples/04-auth-with-handlers/auth_project_with_handler/: config.py  root_module.py  server.py
examples/04-auth-with-handlers/auth_project_with_handler/auth/: auth_scheme.py  controllers.py  module.py  services.py
examples/04-auth-with-handlers/auth_project_with_handler/auth/tests/: test_auth_with_handler_controllers.py
examples/04-auth-with-handlers/auth_project_with_handler/users/: module.py  schemas.py
examples/quick-project/: README.md  pyproject.toml
examples/quick-project/carsite/: config.py  root_module.py  server.py
examples/quick-project/carsite/car/: schemas.py
guard/: __init__.py  apikey.py  base.py  decorator.py  http.py  interface.py
helper/: __init__.py  module_loading.py
middleware/: __init__.py  authentication.py  base.py  di.py  errors.py  exceptions.py  versioning.py
module/: __init__.py  base.py  common.py  events.py
openapi/: builder.py  index.html  module.py  openapi_v3.py  route_doc_models.py
quick-project/: index.html
release-notes/: index.html
responses/: __init__.py  model.py  serializer.py
route_models/: __init__.py  helpers.py  param_functions.py  param_resolvers.py  params.py  route_param_model.py
routing/: __init__.py  base.py  decorator.py  operations.py  path.py  route_definitions.py  websocket_handlers.py
samples/01-carapp/: pyproject.toml
samples/01-carapp/carapp/: commands.py  config.py  root_module.py
samples/01-carapp/carapp/apps/car/: controllers.py  module.py  routers.py  schemas.py  services.py
samples/01-carapp/carapp/apps/car/tests/: test_controllers.py  test_routers.py
samples/01-carapp/carapp/apps/car/views/car/: list.html
samples/01-carapp/carapp/tests/: conftest.py
samples/02-socketio-app/: README.md  pyproject.toml
samples/02-socketio-app/socketio_app/: config.py  root_module.py  server.py
samples/02-socketio-app/socketio_app/apps/events/: controllers.py  gateways.py  module.py  schemas.py  services.py
samples/02-socketio-app/socketio_app/apps/events/templates/events/: index.html
samples/03-auth-with-guards/: pyproject.toml
samples/03-auth-with-guards/auth_project/: config.py  root_module.py  server.py
samples/03-auth-with-guards/auth_project/auth/: controllers.py  guards_case_2.py  module.py  schemas.py
samples/03-auth-with-guards/auth_project/auth/tests/: test_auth_controllers.py
samples/03-auth-with-guards/auth_project/users/: module.py  services.py
scripts/: mypy-pre-commit.sh
search/: search_index.json
templating/: __init__.py  environment.py  helper.py  interface.py  loader.py  renderer.py
tests/: conftest.py  injector_module.py  main.py  schema.py  test_attribute_dict.py  test_events.py  test_guard.py  test_hashers.py  test_operation_meta.py  test_path.py  test_query.py  test_reflect.py  test_reflector.py  test_sample_project.py  test_schema.py  test_serializer.py  test_shortcuts.py  test_static_files_mount.py  test_staticfiles.py  test_testing.py  test_testing_dependency_resolution.py  test_websocket.py  test_websocket_handler.py  utils.py
versioning/: __init__.py  base.py  resolver.py
(+1174 files in other folders)
