[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "ellar"


[project]
name = "ellar"
authors = [
   {name = "Ezeudoh Tochukwu", email = "tochukwu.ezeudoh@gmail.com"},
]
dynamic = ["version", "description"]
requires-python = ">=3.7"
readme = "README.md"
home-page = "https://github.com/eadwinCode/ellar"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "injector == 0.20.1",
    "starlette == 0.23.1",
    "pydantic >=1.6.2,!=1.7,!=1.7.1,!=1.7.2,!=1.7.3,!=1.8,!=1.8.1,<2.0.0",
    "jinja2",
    # cli
    "typer >=0.6.1,<0.8.0",
    # testing
    "httpx >= 0.22.0"
]

[project.urls]
Documentation = "https://github.com/eadwinCode/ellar"
Source = "https://github.com/eadwinCode/ellar"
Homepage = "https://eadwincode.github.io/ellar/"

[project.optional-dependencies]
standard = [
    "ellar-cli >=0.0.2,<5.0.0"
]
test = [
    "pytest >=6.2.4,<8.0.0",
    "pytest-cov >=2.12.0,<5.0.0",
    "mypy ==0.971",
    "flake8 >=3.8.3,<7.0.0",
    "black ==22.12.0",
    "isort >=5.0.6,<6.0.0",
    "pytest-asyncio",
    "databases[sqlite] >= 0.3.2",
    "orjson >= 3.2.1",
    "ujson >= 4.0.1",
    "python-multipart >= 0.0.5",
    "anyio[trio] >= 3.2.1",
    "autoflake",
    "email_validator >=1.1.1",

    # types
    "types-ujson ==5.7.0.0",
    "types-orjson ==3.6.2",
    "types-dataclasses ==0.6.6",
]
dev = [
    "pre-commit"
]

all = [
    "python-multipart >=0.0.5,<0.0.6",
    "itsdangerous >=1.1.0,<3.0.0",
    "pyyaml >=5.3.1,<7.0.0",
    "ujson >=4.0.1,!=4.0.2,!=4.1.0,!=4.2.0,!=4.3.0,!=5.0.0,!=5.1.0,<6.0.0",
    "orjson >=3.2.1,<4.0.0",
    "email_validator >=1.1.1,<2.0.0",
]
doc = [
    "mkdocs >=1.1.2,<2.0.0",
    "mkdocs-material >=7.1.9,<9.0.0",
    "mdx-include >=1.4.1,<2.0.0",
    "mkdocs-markdownextradata-plugin >=0.1.7,<0.3.0",
    "markdown-include",
    "mkdocstrings"
]
