[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "ellar"


[project]
name = "ellar"
authors = [
   {name = "Ezeudoh Tochukwu", email = "tochukwu.ezeudoh@gmail.com"},
]
dynamic = ["version", "description"]
requires-python = ">=3.7"
readme = "README.md"
home-page = "https://github.com/python-ellar/ellar"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "injector == 0.22.0",
    "starlette == 0.38.2",
    "pydantic >=2.5.1,<3.0.0",
    "typing-extensions>=4.8.0",
    "jinja2"
]

[project.urls]
Documentation = "https://python-ellar.github.io/ellar/"
Source = "https://github.com/python-ellar/ellar"
Homepage = "https://python-ellar.github.io/ellar/"
"Bug Tracker" = "https://github.com/python-ellar/ellar/issues"

[project.optional-dependencies]
all = [
    "python-multipart >=0.0.5,<0.0.10",
    "itsdangerous >=1.1.0,<3.0.0",
    "pyyaml >=5.3.1,<7.0.0",
    "ujson >=4.0.1,!=4.0.2,!=4.1.0,!=4.2.0,!=4.3.0,!=5.0.0,!=5.1.0,<6.0.0",
    "orjson >=3.2.1,<4.0.0",
    "email_validator >=2.0.0",
    "httpx >= 0.22.0",
    "passlib >= 1.7.4",
]

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
#    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191", # indentation contains tabs
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"ellar/pydantic/fields.py" = ["B006"]

[tool.ruff.isort]
known-third-party = ["ellar", "pydantic", "starlette"]
[tool.mypy]

show_column_numbers = true

follow_imports = 'normal'
ignore_missing_imports = true

# be strict
disallow_untyped_calls = true
warn_return_any = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true

disallow_untyped_defs = true
check_untyped_defs = true
implicit_reexport = false
disable_error_code = ['union-attr', 'type-abstract', 'arg-type']

[[tool.mypy.overrides]]
module = "ellar.common.compatible.*"
ignore_errors = true
[[tool.mypy.overrides]]
module = "ellar.core.conf.*"
ignore_errors = true
[[tool.mypy.overrides]]
module = "ellar.core.services.*"
ignore_errors = true
[[tool.mypy.overrides]]
module = "ellar.samples.*"
ignore_errors = true
[[tool.mypy.overrides]]
module = "ellar.utils.functional"
ignore_errors = true
[[tool.mypy.overrides]]
module = "ellar.pydantic.*"
ignore_errors = true
